chore(argo-events): use policy/v1 for poddisruptionbudgets, when available (#1710)
* Use policy/v1 for poddisruptionbudgets, when available

Signed-off-by: Vadim Grek <vadimprog@gmail.com>

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.7.3
 description: A Helm chart for Argo Events, the event-driven workflow automation framework
 name: argo-events
-version: 2.0.7
+version: 2.0.8
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-events/assets/logo.png
 keywords:
@@ -15,6 +15,4 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)
-    - "[Fixed]: generated value for app.kubernetes.io/version label is now valid even when defining a controller/webhook .image.tag with a SHA digest"
-    - "[Fixed]: webhook.image.tag value now overrides the tag in the webhook deployment"
+    - "[Fixed]: use policy/v1 for poddisruptionbudgets, when available
