feat(argo-workflows): Support images property to workflow-controller-configmap for emissary executor (#1708)
* feat(argo-workflows): Support images property to workflow-controller-configmap for emissary executor
Signed-off-by: yu-croco <yu.croco@gmail.com>

* chore(argo-workflows): adopt concise name
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -630,3 +630,12 @@ customArtifactRepository: {}
 #     passwordSecret:
 #       name: artifactory-creds
 #       key: password
+
+emissary:
+  # -- The command/args for each image on workflow, needed when the command is not specified and the emissary executor is used.
+  ## See more: https://argoproj.github.io/argo-workflows/workflow-executors/#emissary-emissary
+  images: []
+  #  argoproj/argosay:v2:
+  #    cmd: [/argosay]
+  #  docker/whalesay:latest:
+  #    cmd: [/bin/bash]
