chore(argo-workflows): Support missing configurations to workflow controller cm Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -173,3 +173,8 @@ data:
     {{- with .Values.emissary.images }}
     images: {{- toYaml . | nindent 6 }}
     {{- end }}
+    nodeEvents:
+      enabled: {{ .Values.controller.nodeEvents.enabled }}
+    {{- with .Values.controller.kubeConfig }}
+    kubeConfig: {{- toYaml . | nindent 6 }}
+    {{- end }}
