Add roleAndRoleBinding switch for argocd-application-controller and argocd-applicationset
Signed-off-by: Serhiy Martynenko <serhiy.martynenko@gmail.com>

--- a/charts/argo-cd/templates/argocd-applicationset/rolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/rolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.applicationSet.enabled }}
+{{- if and .Values.applicationSet.enabled .Values.applicationSet.roleAndRoleBinding.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
