--- a/charts/argo-cd/templates/argocd-application-controller/role.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/role.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.controller.roleAndRoleBinding.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -34,3 +35,4 @@ rules:
   verbs:
   - create
   - list
+{{- end }}
