--- a/charts/argo-cd/templates/argocd-notifications/bots/slack/role.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/bots/slack/role.yaml
@@ -1,4 +1,4 @@
-{{ if and .Values.notifications.enabled .Values.notifications.bots.slack.enabled }}
+{{ if and .Values.notifications.enabled .Values.notifications.bots.slack.enabled .Values.notifications.bots.slack.roleAndRoleBinding.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
