--- a/charts/argo-cd/templates/argocd-notifications/rolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/rolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.notifications.enabled }}
+{{- if and .Values.notifications.enabled .Values.notifications.roleAndRoleBinding.create}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
