Add roleAndRoleBinding switch for argocd-repo-server
Signed-off-by: Serhiy Martynenko <serhiy.martynenko@gmail.com>

--- a/charts/argo-cd/templates/argocd-repo-server/rolebinding.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/rolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.repoServer.serviceAccount.create }}
+{{- if .Values.repoServer.roleAndRoleBinding.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
