--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2101,6 +2101,10 @@ repoServer:
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
+  roleAndRoleBinding:
+    # -- Create a role and role binding for the repo server
+    create: true
+
   # -- Additional containers to be added to the repo server pod
   extraContainers: []
 
