Add roleAndRoleBinding switch for argocd-server
Signed-off-by: Serhiy Martynenko <serhiy.martynenko@gmail.com>

--- a/charts/argo-cd/templates/argocd-server/role.yaml
+++ b/charts/argo-cd/templates/argocd-server/role.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.server.roleAndRoleBinding.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -42,3 +43,4 @@ rules:
   verbs:
   - create
   - list
+{{- end}}
