--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1582,6 +1582,10 @@ server:
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
+  roleAndRoleBinding:
+    # -- Create a role and role binding for the server
+    create: true
+
   ingress:
     # -- Enable an ingress resource for the Argo CD server
     enabled: false
