Add roleAndRoleBinding switch for Dex
Signed-off-by: Serhiy Martynenko <serhiy.martynenko@gmail.com>

--- a/charts/argo-cd/templates/dex/rolebinding.yaml
+++ b/charts/argo-cd/templates/dex/rolebinding.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.dex.enabled }}
+{{- if and .Values.dex.enabled .Values.dex.roleAndRoleBinding.create}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
