--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -920,6 +920,10 @@ dex:
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
+  roleAndRoleBinding:
+    # -- Create a role and role binding for Dex
+    create: true
+
   # -- Additional volumeMounts to the dex main container
   volumeMounts: []
 
