Update changelog for new version
Signed-off-by: Serhiy Martynenko <serhiy.martynenko@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,4 +23,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: Support relabelings and metricRelabelings to Notification's ServiceMonitor"
+    - "[Added]: A new option for each component to enable or disable the creation of a Role and RoleBinding for that component."
