--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,6 @@ jobs:
         uses: helm/chart-releaser-action@v1.4.0
         with:
           config: "./.github/configs/cr.yaml"
-          charts_dir: "charts/argo-cd"
+          #charts_dir: "charts/argo-cd"
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
