--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,15 +33,16 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      ## This is required to consider the old Circle-CI Index and to stay compatible with all the old releases.
-      - name: Fetch current Chart Index
+      - name: Package chart
         run: |
-          git checkout origin/gh-pages index.yaml
+          rm -rf .cr-release-packages
+          mkdir .cr-release-packages
+          helm package charts/argo-cd -u -d .cr-release-packages/
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.4.0
+        uses: helm/chart-releaser-action@main
         with:
           config: "./.github/configs/cr.yaml"
-          #charts_dir: "charts/argo-cd"
+          skip_packaging: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
