--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,10 +3,15 @@ name: Chart Publish
 on:
   push:
     branches:
-      - main
+      - argo-events
+
+permissions:
+  contents: read
 
 jobs:
   publish:
+    permissions:
+      contents: write  # for helm/chart-releaser-action to push chart release and create a release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,25 +20,26 @@ jobs:
           fetch-depth: 0
 
       - name: Install Helm
-        uses: azure/setup-helm@v1
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.10.1 # Also update in lint-and-test.yaml
 
       - name: Add dependency chart repos
         run: |
           helm repo add dandydeveloper https://dandydeveloper.github.io/charts/
-
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"  
-          
-      ## This is required to consider the old Circle-CI Index and to stay compatible with all the old releases.
-      - name: Fetch current Chart Index 
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - name: Package chart
         run: |
-          git checkout origin/gh-pages index.yaml
-
+          rm -rf .cr-release-packages
+          mkdir .cr-release-packages
+          helm package charts/argo-events -u -d .cr-release-packages/
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.4.0
-        with: 
+        uses: helm/chart-releaser-action@main
+        with:
           config: "./.github/configs/cr.yaml"
+          skip_packaging: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
