Adding @default comment line to NATS versions
Signed-off-by: Ramin Akhbari <ramin@akhbari.us>

--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -62,6 +62,7 @@ configs:
   ## NATS event bus
   nats:
     # -- Supported versions of NATS event bus
+    # @default -- See [values.yaml]
     versions:
       - version: latest
         natsStreamingImage: nats-streaming:latest
