--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -62,10 +62,14 @@ configs:
   ## NATS event bus
   nats:
     # -- Supported versions of NATS event bus
+    # @default -- See [values.yaml]
     versions:
       - version: latest
         natsStreamingImage: nats-streaming:latest
         metricsExporterImage: natsio/prometheus-nats-exporter:latest
+      - version: 0.22.1
+        natsStreamingImage: nats-streaming:0.22.1
+        metricsExporterImage: natsio/prometheus-nats-exporter:0.8.0
 
   ## JetStream event bus
   jetstream:
