--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -25,7 +25,7 @@ data:
     {{- with .Values.controller.initialDelay }}
     initialDelay: {{ . }}
     {{- end }}
-    {{- if or .Values.mainContainer.resources .Values.mainContainer.env .Values.mainContainer.securityContext}}
+    {{- if or .Values.mainContainer.resources .Values.mainContainer.env .Values.mainContainer.envFrom .Values.mainContainer.securityContext}}
     mainContainer:
       imagePullPolicy: {{ default (.Values.images.pullPolicy) .Values.mainContainer.imagePullPolicy }}
       {{- with .Values.mainContainer.resources }}
@@ -33,6 +33,9 @@ data:
       {{- end }}
       {{- with .Values.mainContainer.env }}
       env: {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.mainContainer.envFrom }}
+      envFrom: {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.mainContainer.securityContext }}
       securityContext: {{- toYaml . | nindent 8 }}
