--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -324,6 +324,8 @@ mainContainer:
   resources: {}
   # -- Adds environment variables for the Workflow main container
   env: []
+  # -- Adds reference environment variables for the Workflow main container
+  envFrom: []
   # -- sets security context for the Workflow main container
   securityContext: {}
 
