chore(argo-workflows): Support podGCDeleteDelayDuration and podGCGracePeriodSeconds (#1728)
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -181,3 +181,9 @@ data:
     {{- with .Values.controller.kubeConfig }}
     kubeConfig: {{- toYaml . | nindent 6 }}
     {{- end }}
+    {{- with .Values.controller.podGCGracePeriodSeconds }}
+    podGCGracePeriodSeconds: {{ . }}
+    {{- end }}
+    {{- with .Values.controller.podGCDeleteDelayDuration }}
+    podGCDeleteDelayDuration: {{ . }}
+    {{- end }}
