--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,6 +23,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Docs]: Added sample how to provide K8s credentials plugin"
-    - "[Docs]: Added sample how to provide Argo config management plugin"
-    - "[Docs]: Removed samples that injects tools into incorrect controllers"
+    - "[Fixed]: Disabling Dex completely"
