--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.5.5
+appVersion: v2.5.6
 kubeVersion: ">=1.22.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.17.0
+version: 5.17.1
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -23,6 +23,4 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: Support for extraContainers and initContainers for applicationSet and notifications"
-    - "[Added]: Support for use of Helm templates for extraContainers and initContainers"
-    - "[Docs]: Added notes about custom Helm template support"
+    - "[Changed]: Update Argo CD to v2.5.6"
