feat(argo-workflows): simplify image values so registry is included
In #1754 I added helper function to fix issue if image registry is left empty
in values.yaml so a prefixing forward slash is left.

I noticed the argo-cd chart values.yaml doesn't have a separate key for image
registry.  This simplifies the including or excluding an image registry.

- [x] remove helper function from previous PR
- [x] update README
  - [x] remove [controller|executor|server].image.registry
  - [x] update [controller|executor|server].image.repository to include `quay.io` registry prefix by default
  - [x] remove mention of registry key in update from old argo chart at bottom
- [x] update image.repository to include default quay.io registry value
- [x] simplify image value usage

Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/charts/argo-workflows/templates/server/server-deployment.yaml
+++ b/charts/argo-workflows/templates/server/server-deployment.yaml
@@ -35,7 +35,7 @@ spec:
       {{- end }}
       containers:
         - name: argo-server
-          image: "{{- include "argo-workflows.image" (dict "context" . "image" .Values.server.image) }}:{{ default (include "argo-workflows.defaultTag" .) .Values.server.image.tag }}"
+          image: "{{ .Values.server.image.repository }}:{{ default (include "argo-workflows.defaultTag" .) .Values.server.image.tag }}"
           imagePullPolicy: {{ .Values.images.pullPolicy }}
           securityContext:
             {{- toYaml .Values.server.securityContext | nindent 12 }}
